@@ -13,3 +13,4 @@ default.wm
 gnome-login-check
 default.session.5
 gnome-session.1
+gnome-libice-check
