@@ -1,3 +1,9 @@
+2000-10-30  Jacob "Ulysses" Berkman  <jacob@helixcode.com>
+
+	* gnome-libice-check.c (main): seg fault if libICE is broken
+
+	* gnome-login-check.c (main): add a test for broken libICE on solaris
+
 2000-10-15 John Fleck <jfleck@inkstain.net>
 
 	* updated help/C/session.sgml for Nautilus compatibility (patch
